sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:5: error: not found: value echanges
    echanges = true
    ^AlgBubbleSort3:9: error: not found: value echanges
        echanges = false
        ^AlgBubbleSort3:12: error: not found: value echanges
    if(echanges) {
       ^